--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-
+paginate: 1
+paginate_path: "/page:num"
 # Build settings
 markdown: kramdown
 theme: minima
@@ -32,3 +33,4 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+
